# mcp

./: .env.example  .gitignore  README.md  pyproject.toml
infra/nginx/: mcp.conf  portal.conf
infra/systemd/: mcp-server.service
mcp_server/: __init__.py  __main__.py  admin_router.py  app.py  config.py  database.py  router.py  seed_providers.py
mcp_server/memory/: __init__.py  customization_memory.py  security_memory.py
mcp_server/metrics/: __init__.py  collector.py  storage.py
mcp_server/models/: __init__.py  customization.py  llm.py  security.py
mcp_server/portal/: index.html
mcp_server/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
scripts/: setup.sh
